--- a/Topup_Lab03/nbproject/project.properties
+++ b/Topup_Lab03/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=topup_lab03.TestLinkedList
+main.class=TestLinkedList
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
